fix: Increase output height if contents overflow

--- a/src/components/Output/Output.css
+++ b/src/components/Output/Output.css
@@ -8,19 +8,17 @@
 #output-container {
   --min-aspect-ratio: 1.414;
   --page-width: 50em;
-  display: block;
+  display: flex;
   justify-self: center;
   margin: var(--margin-xl) auto;
   width: var(--page-width);
-  height: calc(var(--page-width) * var(--min-aspect-ratio));
+  min-height: calc(var(--page-width) * var(--min-aspect-ratio));
 }
 
 .output-page {
   box-shadow: var(--double-shadow);
   background-color: white;
   padding: 10%;
-  height: 100%;
-  overflow-y: visible;
   color: black;
   font: var(--p);
   font-size: 0.9cqw;
